# pdf-analyzer

./: LICENSE  README.md  setup.cfg
pdf_analyzer/: __init__.py  core.py
tests/: test_core.py
