[metadata]
name = pdf-analyzer
version = 0.1.0
author = Your Name
description = Extract metadata from PDF files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourusername/pdf-analyzer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    PyPDF2
python_requires = >=3.7
